--- a/app/authentication/auth_templates/signin.html
+++ b/app/authentication/auth_templates/signin.html
@@ -10,7 +10,7 @@
 <main class="container p-5">
     <div class="row">
         <aside class="col-12 col-md-6">
-            <h2 class="text-light">Sign In</h2>
+            <h2 class="text-warning">Sign In</h2>
             {% include 'forms.html' %}
         </aside>
     </div>
