--- a/app/authentication/auth_templates/signup.html
+++ b/app/authentication/auth_templates/signup.html
@@ -10,7 +10,7 @@
 <main class="container p-5">
     <div class="row">
         <aside class="col-12 col-md-6">
-            <h2 class="text-light">Create your account</h2>
+            <h2 class="text-warning">Create your account</h2>
             {% include 'forms.html' %}
         </aside>
     </div>
