--- a/app/authentication/auth_templates/signin.html
+++ b/app/authentication/auth_templates/signin.html
@@ -11,7 +11,21 @@
     <div class="row">
         <aside class="col-12 col-md-6">
             <h2 class="text-warning">Sign In</h2>
-            {% include 'forms.html' %}
+            <form action="" method="POST">
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    <fieldset id="email-field" class="text-warning">
+                        {{ form.email.label }}
+                        {{ form.email(class = 'form-control', placeholder = 'Enter Email ') }}
+                    </fieldset>
+                </div>
+                <fieldset id="pass-field" class="text-warning">
+                    {{ form.password.label }}
+                    {{ form.password(class = 'form-control', placeholder = 'Enter Password ') }}
+                </fieldset>
+                {{ form.submit_button(class = "btn btn-warning btn-block mt-2 text-light") }}
+                </div>
+            </form>
         </aside>
     </div>
 </main>
