--- a/app/site/site_templates/index.html
+++ b/app/site/site_templates/index.html
@@ -1,6 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %} 
+
+<h6 class="text-warning text-center text-shadow p-5">Flask application that allows users to 
+    Sign-Up/Sign-In<br>
+    Utilitizing Insomnia API testing <br>
+    PostgreSQL database <br>
+    <a href="https://github.com/Schadre/FlaskPhonebook">Github link</a>
+</h6>
 <section class="text-center">
     <div class="container p-5">
         <div class="row">
@@ -10,6 +17,7 @@
         </div>
     </div>
 </section>
+
 <section class="text-center">
     <div class="container p-5">
         <div class="row">
