--- a/app/site/site_templates/index.html
+++ b/app/site/site_templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %} 
 
-<h6 class="text-warning text-center text-shadow p-5">Flask application that allows users to 
+<h6 class="text-dark text-center text-shadow p-5">Back-end Flask application that allows users to 
     Sign-Up/Sign-In<br>
     Utilitizing Insomnia API testing <br>
     PostgreSQL database <br>
