--- a/app/authentication/auth_templates/signin.html
+++ b/app/authentication/auth_templates/signin.html
@@ -4,7 +4,12 @@
 <style>
     body {
         background-image: url('../static/contacts.jpeg');
+        background-position: 100%;
         background-size: cover;
+        height: 100vh;
+        background-repeat: no-repeat;
+        margin: 0;
+        padding: 0;
     }
 </style>
 <main class="container p-5">
