--- a/app/site/site_templates/index.html
+++ b/app/site/site_templates/index.html
@@ -1,13 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %} 
-
-<h6 class="text-dark text-center text-shadow p-5">Back-end Flask application that allows users to 
-    Sign-Up/Sign-In<br>
-    Utilitizing Insomnia API testing <br>
-    PostgreSQL database <br>
-    <a href="https://github.com/Schadre/FlaskPhonebook">Github link</a>
-</h6>
+<section class="d-flex align-items-center justify-content-center p-5">
+    <section id="profile" class="p-5">
+        <h6 class="text-dark text-center text-shadow p-5">Back-end Flask application that allows users to 
+            Sign-Up/Sign-In<br>
+            Storing all their favorite contacts<br>
+            Utilitizing Insomnia for REST API testing <br>
+            PostgreSQL database <br>
+            <a href="https://github.com/Schadre/FlaskPhonebook">Github link</a>
+        </h6>
+    </section>
+</section>
 <section class="text-center">
     <div class="container p-5">
         <div class="row">
@@ -18,10 +22,10 @@
     </div>
 </section>
 
-<section class="text-center">
+<section class="d-flex align-items-center justify-content-center text-center">
     <div class="container p-5">
         <div class="row">
-            <div id="player">
+            <div id="player" class="d-flex align-items-center justify-content-center">
                 <blockquote class="tiktok-embed" cite="https://www.tiktok.com/@musicclirikk/video/7002409415034850586" data-video-id="7002409415034850586" style="max-width: 605px;min-width: 325px;" > <section> <a target="_blank" title="@musicclirikk" href="https://www.tiktok.com/@musicclirikk?refer=embed">@musicclirikk</a> Hotline Bling - Drake <a title="hotlinebling" target="_blank" href="https://www.tiktok.com/tag/hotlinebling?refer=embed">#hotlinebling</a> <a title="drake" target="_blank" href="https://www.tiktok.com/tag/drake?refer=embed">#drake</a> <a title="musicclirikk" target="_blank" href="https://www.tiktok.com/tag/musicclirikk?refer=embed">#musicclirikk</a> <a target="_blank" title="♬ Hotline Bling - Drake" href="https://www.tiktok.com/music/Hotline-Bling-6402126547087526657?refer=embed">♬ Hotline Bling - Drake</a> </section> </blockquote> <script async src="https://www.tiktok.com/embed.js"></script>
             </div>
         </div>
